# piqr

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/picopter/: CamMeasurement.h  IMUOutput.h  Interface.h  SpinRates.h
devel/lib/picopter/: quadpose  tag_detector
devel/lib/pkgconfig/: apriltags.pc  picopter.pc  usb_cam.pc
devel/lib/python2.7/dist-packages/picopter/msg/: _CamMeasurement.py  _IMUOutput.py  _Interface.py  _SpinRates.py  __init__.py
devel/lib/usb_cam/: usb_cam_node
devel/share/apriltags/cmake/: apriltagsConfig.cmake
devel/share/common-lisp/ros/picopter/msg/: CamMeasurement.lisp  IMUOutput.lisp  Interface.lisp  SpinRates.lisp  _package.lisp  _package_CamMeasurement.lisp  _package_IMUOutput.lisp  _package_Interface.lisp  _package_SpinRates.lisp  picopter-msg.asd
devel/share/gennodejs/ros/picopter/msg/: CamMeasurement.js  IMUOutput.js  Interface.js  SpinRates.js  _index.js
devel/share/picopter/cmake/: picopter-msg-extras.cmake  picopter-msg-paths.cmake  picopterConfig.cmake
devel/share/roseus/ros/picopter/: manifest.l
devel/share/roseus/ros/picopter/msg/: CamMeasurement.l  IMUOutput.l  Interface.l  SpinRates.l
devel/share/usb_cam/cmake/: usb_camConfig.cmake
src/apriltags/: CMakeLists.txt
src/apriltags/src/: TagDetection.cc
src/picopter/: CMakeLists.txt  package.xml
src/picopter/include/picopter/: tag_detector.h
src/picopter/launch/: picopter.launch  picopter_esc_calibrate.launch
src/picopter/msg/: Apriltag.msg  Apriltags.msg  CamMeasurement.msg  IMUOutput.msg  Interface.msg  SpinRates.msg
src/picopter/src/: esc.py  esc_calibrate.py  flight_planner.py  imu.py  imu_data.py  interface.py  motor_control.py  motor_controller.py  motor_controller.py.save  picopter_fly.py  pid.py  quad_controller.py  quad_state.py  quadcopter.py  quadposepub.cpp  state_estimator.py  tag_detector.cpp
src/picopter/src/nodes/: tag_detector_node.cpp
